# Patterns_MVincent

./: .gitignore  README.md
Cpp_Threads/: CMakeLists.txt
Cpp_Threads/src/: main.cc
ThreadExamplesCpp/: CMakeLists.txt
ThreadExamplesCpp/src/: main.cc  vector.h
bash_scripts/: ran_click_script.sh
common/: boat.hpp  car.hpp
creational/: README.md
pattern_creational/builder/: CMakeLists.txt
pattern_creational/builder/src/: boat_builder.hpp  builder.hpp  car_builder.hpp  color.hpp  director.hpp  main.cpp
pattern_creational/singleton/: CMakeLists.txt
pattern_creational/singleton/src/: main.cpp  singleton.hpp
scripts_bash/: clangd_format.sh  ran_click_script.sh  toggle_click_scripts.sh
scripts_python/: builder.py  singleton.py
threads/src/: main.cc  vector.h
